Bug 471321: Fix URIs and URLs for the tcf file system.
Change-Id: I3b8b4c5dc0b06f93e432c899aeb836dc1cb8e54f
Signed-off-by: Markus Schorn <markus.schorn@windriver.com>